--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,23 +1,34 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #BBBBBB;
-    color: #839373;
+    background-color: #E5E5E5;
+    color: #5A6B50;
     text-align: center;
 }
 header {
     position: fixed;
     width: 100%;
-    background: #9AAB89;
+    background: #AFC1A6;
     padding: 10px;
     top: 0;
     left: 0;
+    z-index: 1000;
 }
 header img {
     width: 100%;
     height: auto;
 }
 main {
-    margin-top: 150px;
+    margin-top: 200px;
     padding: 20px;
+}
+a#maps-link {
+    display: block;
+    margin-top: 10px;
+    color: #2E4A2D;
+    font-weight: bold;
+    text-decoration: none;
+}
+a#maps-link:hover {
+    text-decoration: underline;
 }
