--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,11 @@ header {
     left: 0;
     z-index: 1000;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    height: 100px; /* Altura fija del header */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 header img {
     width: 100%;
@@ -21,7 +26,7 @@ header img {
     display: block;
 }
 main {
-    padding-top: calc(10px + 60px + 20px); /* Ajusta según el tamaño del header */
+    padding-top: 120px; /* Espacio suficiente para que no quede tapado por el header */
     padding: 20px;
 }
 a#maps-link {
