--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -295,9 +295,15 @@ th {
 }
 
 @font-face {
-  font-family: 'Glyphicons Halflings';
-  src: url("../fonts/bootstrap/glyphicons-halflings-regular.eot");
-  src: url("../fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/bootstrap/glyphicons-halflings-regular.woff2") format("woff2"), url("../fonts/bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("../fonts/bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("../fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
+  font-family: "Brittany Signature";
+  src: url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.eot");
+  src: url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.eot?#iefix")format("embedded-opentype"),
+  url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.woff2")format("woff2"),
+  url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.woff")format("woff"),
+  url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.ttf")format("truetype"),
+  url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.svg#Brittany Signature")format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 
 .glyphicon {
