--- a/css/icomoon.css
+++ b/css/icomoon.css
@@ -1,17 +1,18 @@
 @font-face {
-    font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?1oniuf');
-    src:    url('fonts/icomoon.eot?1oniuf#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?1oniuf') format('truetype'),
-        url('fonts/icomoon.woff?1oniuf') format('woff'),
-        url('fonts/icomoon.svg?1oniuf#icomoon') format('svg');
+    font-family: "Brittany Signature";
+    src: url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.eot");
+    src: url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.eot?#iefix")format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.woff2")format("woff2"),
+    url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.woff")format("woff"),
+    url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.ttf")format("truetype"),
+    url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.svg#Brittany Signature")format("svg");
     font-weight: normal;
     font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
+    font-family: "Brittany Signature" !important;
     speak: none;
     font-style: normal;
     font-weight: normal;
