--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,23 @@
 @font-face {
-  font-family: 'icomoon';
-  src: url("../fonts/icomoon/icomoon.eot?srf3rx");
-  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"), url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"), url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
+  font-family: "Brittany Signature";
+  src: url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.eot");
+  src: url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.eot?#iefix")format("embedded-opentype"),
+  url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.woff2")format("woff2"),
+  url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.woff")format("woff"),
+  url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.ttf")format("truetype"),
+  url("https://db.onlinewebfonts.com/t/b4d584ed0e53ba94a815f817690faab2.svg#Brittany Signature")format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
 /* =======================================================
 *
-* 	Template Style 
+* 	Template Style
 *	Edit this section
 *
 * ======================================================= */
 body {
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Aileron", Arial, sans-serif;
   line-height: 1.6;
   font-size: 16px;
   background: #AFC1A6;
@@ -42,12 +46,12 @@ p, ul, ol {
   margin-bottom: 1.5em;
   font-size: 16px;
   color: #848484;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Aileron", Arial, sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
   color: #5a5a5a;
-  font-family: "Montez", cursive;
+  font-family: "Brittany Signature", cursive;
   font-weight: 400;
   margin: 0 0 30px 0;
 }
@@ -403,7 +407,7 @@ figure {
 
 #fh5co-primary-menu > li > .sf-with-ul:after {
   border: none !important;
-  font-family: 'icomoon';
+  font-family: 'Brittany Signature';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -429,7 +433,7 @@ figure {
 
 #fh5co-primary-menu > li > ul li > .sf-with-ul:after {
   border: none !important;
-  font-family: 'icomoon';
+  font-family: 'Brittany Signature';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -616,13 +620,13 @@ figure {
 #fh5co-countdown .countdown span {
   margin: 0 30px;
   display: inline-block;
-  font-family: "Montez", cursive;
+  font-family: "Brittany Signature", cursive;
 }
 
 #fh5co-countdown .countdown small {
   display: block;
   font-size: 16px;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Aileron", Arial, sans-serif;
 }
 
 .couple-wrap {
@@ -772,7 +776,7 @@ figure {
 }
 
 .groom-men h3 {
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Aileron", Arial, sans-serif;
   font-size: 18px;
 }
 
@@ -863,7 +867,7 @@ figure {
   margin-bottom: 20px;
   font-weight: 300;
   line-height: 1.5;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Aileron", Arial, sans-serif;
 }
 
 .fh5co-blog .blog-text h3 a {
