fix: some changes

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-$font-primary: "Brittany Signature", sans-serif;
+$font-primary: "Aileron", sans-serif;
 $font-secondary: "Brittany Signature", sans-serif;
 // Overrides
 $grid-gutter-width: 40px;
