--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,9 @@ figure {
   color: #2E4A2D !important;
 }
 
+#fh5co-confirmation,
+#fh5co-remuneration,
+#fh5co-extra,
 #fh5co-couple,
 #fh5co-countdown,
 #fh5co-groom-bride,
@@ -544,6 +547,9 @@ figure {
 }
 
 @media screen and (max-width: 768px) {
+  #fh5co-confirmation,
+  #fh5co-remuneration,
+  #fh5co-extra,
   #fh5co-couple,
   #fh5co-countdown,
   #fh5co-groom-bride,
@@ -557,8 +563,12 @@ figure {
   }
 }
 
-.fh5co-section-gray {
-  background: #F6FAF7;
+.fh5co-section-green {
+  background: #f5fff8;
+}
+
+.fh5co-section-green-2 {
+  background: #f5fff8;
 }
 
 .heading-section {
@@ -620,7 +630,7 @@ figure {
 #fh5co-countdown .countdown span {
   margin: 0 30px;
   display: inline-block;
-  font-family: "Brittany Signature", cursive;
+  font-family: "Brittany Signature";
 }
 
 #fh5co-countdown .countdown small {
